# posecoach

./: .env.example  .fuse_hidden0000001300000001  .fuse_hidden0000001400000002  .fuse_hidden0000001500000003  .fuse_hidden0000001600000004  .fuse_hidden0000001700000005  .gitattributes  .gitignore  AUDIT_PROMPT.md  CLAUDE.md  CLAUDE_PROJECT_SETUP.md  Clear-Space.ps1  Dockerfile  IMPROVEMENT_PLAN_P11-P14.md  IMPROVEMENT_PLAN_P15-P18.md  ONNX_DIRECT_INFERENCE_P15.md  README.md  RESPONSIVE_MOBILE_P19-P21.md  docker-compose.yml  posecoach_p02_fit3d_clean.ipynb  posecoach_p02_fit3d_colab.ipynb  posecoach_p02_fit3d_kaggle.ipynb  pyproject.toml  requirements.txt
posecoach/: .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements-dev.txt
posecoach/.claude/agents/: api-architect.md  code-reviewer.md  devops-engineer.md  eval-analyst.md  ml-trainer.md  rag-engineer.md  security-auditor.md  thesis-writer.md
posecoach/.claude/commands/: checkpoint.md  debug.md  run-colab.md  run-prompt.md  thesis-eval.md  verify.md
posecoach/.claude/rules/: code-style.md  dataset-training.md  privacy-and-thesis.md
posecoach/.claude/skills/p02-infrastructure/: SKILL.md
posecoach/.claude/skills/p03-websocket-inference/: SKILL.md
posecoach/.claude/skills/p04-react-pwa/: SKILL.md
posecoach/.claude/skills/p05-rag-chatbot/: SKILL.md
posecoach/.claude/skills/p08-observability/: SKILL.md
posecoach/.claude/skills/p09-production-hardening/: SKILL.md
posecoach/.claude/skills/p10-thesis-evaluation/: SKILL.md
posecoach/alembic/: env.py
posecoach/alembic/versions/: 20260507_1700_0001_initial_schema.py  20260521_1100_0002_refresh_tokens.py
posecoach/app/: cache.py  db.py  main.py  metrics.py  models.py  rate_limit.py
posecoach/app/analysis/: angle_ranges.json  form_scorer.py  keypoint_utils.py
posecoach/app/api/v1/: auth.py  chat.py  history.py  ws_inference.py
posecoach/app/auth/: deps.py  schemas.py  security.py
posecoach/app/chatbot/: gemini_client.py  ingest.py  qwen_client.py  rag.py  router.py
posecoach/app/inference/: runner.py  smoother.py
posecoach/app/middleware/: __init__.py  request_id.py  security_headers.py  timing.py
posecoach/data/: CLAUDE.md
posecoach/data/eval/: angle_mae_results.json  baseline_results.json  latency_benchmark.json  rep_counter_validation.json  yolo_results.json
posecoach/data/knowledge_base/: README.md  bench.md  deadlift.md  general_coaching.md  lunge.md  squat.md
posecoach/data/loadtest/: p09_stats_history.csv
posecoach/deploy/: Dockerfile.web
posecoach/deploy/grafana/dashboards/: posecoach.json
posecoach/deploy/prometheus/: prometheus.yml
posecoach/docs/: Fit3D_Download_to_Drive.ipynb  P01_Results_Reference.md  PoseCoach_P01_Colab.ipynb  PoseCoach_P01_Kaggle.ipynb
posecoach/docs/chat-logs/: 2026-04-27_P01-Setup-and-Colab.md  2026-05-07_YOLO-vs-Qwen36-Architecture-Decision.md
posecoach/frontend/: index.html  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
posecoach/frontend/e2e/: auth.spec.ts
posecoach/frontend/src/: App.tsx
posecoach/frontend/src/__tests__/: skeleton.test.ts  useWebSocket.test.ts
posecoach/frontend/src/components/: AuthModal.tsx  CameraFeed.tsx  CoachingCues.tsx  HistoryPanel.tsx  PoseOverlay.tsx
posecoach/frontend/src/hooks/: useChat.ts  usePoseStream.ts  useWebSocket.ts
posecoach/models/: yolo_posecoach_v1.onnx
posecoach/nginx/: CLAUDE.md  nginx.conf
posecoach/scripts/: CLAUDE.md  eval_chatbot.py  eval_form_consistency.py  eval_latency.py  eval_user_study.py  export_thesis_tables.py
posecoach/tests/: conftest.py  test_auth.py  test_chat_router.py  test_db.py  test_form_consistency.py  test_form_scorer.py  test_metrics.py  test_plank_scorer.py  test_smoother.py  test_ws_handler.py
(+423 files in other folders)
