[project]
name = "posecoach"
version = "0.1.0"
description = "Real-time AI gym exercise form correction system"
requires-python = ">=3.11,<3.13"
license = { text = "MIT" }
authors = [{ name = "Ashwin" }]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
timeout = 30
addopts = "-x --cov=app/analysis --cov-fail-under=80"

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]
# B008 — function calls in argument defaults are the standard FastAPI pattern
# (Depends(), Cookie(), Query(), etc.). Disable globally rather than noqa-spam.
ignore = ["B008"]

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["sqlalchemy.ext.mypy.plugin"]

# These libraries don't ship py.typed and the project does not install
# their stubs (some are heavy GPU/ML packages we mock at test time).
[[tool.mypy.overrides]]
module = [
    "chromadb",
    "chromadb.*",
    "sentence_transformers",
    "google",
    "google.genai",
    "google.genai.*",
    "torch",
    "onnxruntime",
    "prometheus_client",
]
ignore_missing_imports = true

# redis-py 5.x ships py.typed but leaves ``from_url`` unannotated, so --strict
# flags the call unless the optional types-redis stubs happen to be installed.
# Relax untyped-call checking in the one thin wrapper module instead of
# depending on per-machine stub presence (a type:ignore would trip
# warn_unused_ignores on machines that DO have the stubs).
[[tool.mypy.overrides]]
module = ["app.cache"]
disallow_untyped_calls = false

# Ultralytics ships no py.typed. When it IS installed (e.g. a dev box that ran an
# ONNX export), --strict's no-implicit-reexport flags `from ultralytics import
# YOLO`; skipping follow keeps it Any whether or not the heavy lib is present.
[[tool.mypy.overrides]]
module = ["ultralytics", "ultralytics.*"]
ignore_missing_imports = true
follow_imports = "skip"
