[project]
name = "posecoach"
version = "0.1.0"
description = "Real-time AI gym exercise form correction system"
requires-python = ">=3.11,<3.13"
license = { text = "MIT" }
authors = [{ name = "Ashwin" }]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
timeout = 30
addopts = "-x --cov=app/analysis --cov-fail-under=80"

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["sqlalchemy.ext.mypy.plugin"]
